--- a/testHTML/autobeam_m21j_test.html
+++ b/testHTML/autobeam_m21j_test.html
@@ -23,7 +23,7 @@
     m.append(n2);
     m.append(n3);
     m.makeBeams({inPlace: true});
-    m.appendNewDOM($('#autobeam_goes_here'));
+    m.appendNewDOM(document.querySelector('#autobeam_goes_here'));
 </script>
 </body>
 </html>
