--- a/testHTML/layout.html
+++ b/testHTML/layout.html
@@ -15,7 +15,7 @@
         p2 = music21.tinyNotation.TinyNotation('2/4 a2 c2 d4 e f g a2 c2 d4 e f g a2 c2 d4 e f g a2 c2 d4 e f g a2 c2 d4 e f g a2 b2 b2 c2');
         s.append(p);
         s.append(p2);
-        s.appendNewDOM($("#scoreDiv"));
+        s.appendNewDOM(document.querySelector("#scoreDiv"));
         ps = s.parts;
         ls = music21.layout.makeLayoutFromScore(s);
         </script>
