--- a/testHTML/midiInKeyChords.html
+++ b/testHTML/midiInKeyChords.html
@@ -32,17 +32,17 @@
         //     const lastNote = s.elements[s.length - 1];
         // }
         s.append(appendObject);
-        const $svgDiv = $("#svgDiv");
-        $svgDiv.empty();
-        s.appendNewDOM($svgDiv);
-    }
+        const svgDiv = document.querySelector("#svgDiv");
+        svgDiv.replaceChildren();
+        s.appendNewDOM(svgDiv);
+	}
 
 	s = new music21.stream.Measure();
 	s.clef = new music21.clef.TrebleClef();
 	s.renderOptions.staffLines = 5;
 
 	metro = new music21.tempo.Metronome();
-	metro.addDiv($("#metronomeDiv")); // todo: appendTo()
+	metro.addDiv(document.querySelector("#metronomeDiv"));
 
 	music21.miditools.config.metronome = metro;
 
@@ -53,7 +53,7 @@
 
 	k.appendKeyboard(kd); // 37key keyboard
 
-	music21.webmidi.createSelector($("#putMidiSelectHere"));
+	music21.webmidi.createSelector(document.querySelector("#putMidiSelectHere"));
 	music21.miditools.callbacks.general = [
 		music21.miditools.makeChords,
 		music21.keyboard.jazzHighlight.bind(k),
