--- a/testHTML/crossSiteTest.html
+++ b/testHTML/crossSiteTest.html
@@ -3,8 +3,8 @@
 </head>
 <body>
    <script>
-       var n = new music21.note.Note("F#");
-       var s = new music21.stream.Stream();
+       const n = new music21.note.Note("F#");
+       const s = new music21.stream.Stream();
        s.append(n);
        s.appendNewDOM();
    </script>
