--- a/testHTML/keyboardJazz.html
+++ b/testHTML/keyboardJazz.html
@@ -22,7 +22,7 @@
        oninputsuccess: function () { console.log("found one!") },
        oninputempty: function () { console.log("nope") }
     };
-    music21.webmidi.createSelector($("#putMidiSelectHere"), options);
+    music21.webmidi.createSelector(document.querySelector("#putMidiSelectHere"), options);
     music21.miditools.callbacks.general = [music21.keyboard.jazzHighlight.bind(k),
                                           music21.miditools.sendToMIDIjs,
                                           ];
