--- a/testHTML/musicxmlTest.html
+++ b/testHTML/musicxmlTest.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+    <title>MusicXML Parse Test</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
