--- a/testHTML/showKeyboard.html
+++ b/testHTML/showKeyboard.html
@@ -160,8 +160,8 @@
         k.scrollable = true;
         k.hideable = true;
 
-        const $kd = $('#keyboardDiv');
-        k.appendKeyboard($kd); // 25key keyboard
+        const kd = document.querySelector('#keyboardDiv');
+        k.appendKeyboard(kd); // 25key keyboard
 
         music21.miditools.config.maxDelay = 200;
 
@@ -175,33 +175,45 @@
             music21.keyboard.jazzHighlight.bind(k)
         ];
 
-        music21.webmidi.createSelector($("#putMidiSelectHere"));
+        music21.webmidi.createSelector(document.querySelector("#putMidiSelectHere"));
         music21.miditools.callbacks.general = midiCallbacksPlay;
 
-        $('#markC').bind('click', function () { k.markC = this.checked; k.redrawSVG() });
-        $('#showNames').bind('click', function () { k.showNames = this.checked; k.redrawSVG() });
-        $('#showOctaves').bind('click', function () { k.showOctaves = this.checked; k.redrawSVG() });
-        $('#playSound').bind('click', function() {
-            if (this.checked) {
+        document.querySelector('#markC').addEventListener('click', e => {
+            k.markC = e.target.checked;
+            k.redrawSVG();
+        });
+        document.querySelector('#showNames').addEventListener('click', e => {
+            k.showNames = e.target.checked;
+            k.redrawSVG();
+        });
+        document.querySelector('#showOctaves').addEventListener('click', e => {
+            k.showOctaves = e.target.checked;
+            k.redrawSVG();
+        });
+        document.querySelector('#playSound').addEventListener('click', e => {
+            if (e.target.checked) {
                 music21.miditools.callbacks.general = midiCallbacksPlay;
             } else {
                 music21.miditools.callbacks.general = midiCallbacksNoPlay;
             }
         });
-        $('input[type=radio][name=staffNumberSelector]').change(function() {
-            if (this.value === 'singleStaff') {
-                $("#svgDiv").css('display', 'block');
-                $("#svgDivGrandStaff").css('display', 'none');
+        const staffRadio = document.querySelector('input[type=radio][name=staffNumberSelector]')
+        staffRadio.addEventListener('change', e => {
+            if (e.target.value === 'singleStaff') {
+                document.querySelector("#svgDiv").style.display = 'block';
+                document.querySelector("#svgDivGrandStaff").style.display = 'none';
                 music21.miditools.callbacks.sendOutChord = appendElement;
             }
-            else if (this.value === 'grandStaff') {
-                $("#svgDiv").css('display', 'none');
-                $("#svgDivGrandStaff").css('display', 'block');
+            else if (e.target.value === 'grandStaff') {
+                document.querySelector("#svgDiv").style.display = 'none';
+                document.querySelector("#svgDivGrandStaff").style.display = 'block';
                 music21.miditools.callbacks.sendOutChord = appendElementGrandStaff;
             } else {
-                console.log("What value is this? " + this.value);
+                console.log("What value is this? " + e.target.value);
             }
-        }).trigger('change');
+        });
+        const evt = new Event('change', {bubbles: true});
+        staffRadio.dispatchEvent(evt);
 
 		</script>
 
