--- a/testHTML/xyLocation.html
+++ b/testHTML/xyLocation.html
@@ -19,16 +19,16 @@
     </div>
     <script src="../build/music21.debug.js"></script>
     <script>
-    var s1 = music21.tinyNotation.TinyNotation(
+    const s1 = music21.tinyNotation.TinyNotation(
         "4/4 c2 d#4 e8 f g4 r8 B c4~ c16 d32 e f g a b c'1 b4 a g f e8 f e d c4 B c1"
     );
-    var m = s1.elements[0];
+    const m = s1.elements[0];
     m.elements.pop();
-    var c = new music21.chord.Chord(['F4', 'A-4', 'C5']);
+    const c = new music21.chord.Chord(['F4', 'A-4', 'C5']);
     c.duration.type = 'eighth';
     m.append(c);
 
-    var s2 = music21.tinyNotation.TinyNotation(
+    const s2 = music21.tinyNotation.TinyNotation(
         '4/4 E2 F#4 G8 r trip{G8 F A} G4 E2~ E1 B4 c B A G8 A G F E4 D C1'
     );
     s = new music21.stream.Score();
@@ -36,35 +36,42 @@
     s.insert(0, s2);
     s.tempo = 90;
 
-    var g = music21.tinyNotation.TinyNotation(
+    const g = music21.tinyNotation.TinyNotation(
         "4/4 c2 d#4 e8 f g4 r8 B c4~ c16 d32 e f g a b c'1 b4 a g f e8 f e d c4 B c1"
     );
 
-    g.renderOptions.events['click'] = function(e) {
+    g.renderOptions.events.click = function(e) {
         // this = SVG div...
-        var _ = g.findNoteForClick(this, e);
-        var dNN = _[0];
-        var n = _[1];
+        const [dNN, n] = g.findNoteForClick(this, e);
         console.log(dNN);
         console.log(n);
     };
     g.appendNewDOM();
 
+    const offset = el => {
+        const box = el.getBoundingClientRect();
+        const docElem = document.documentElement;
+        return {
+            top: box.top + window.pageYOffset - docElem.clientTop,
+            left: box.left + window.pageXOffset - docElem.clientLeft
+        };
+    }
+
     music21.miditools.loadSoundfont('acoustic_grand_piano', () => {
-        var $svg = $('#svg');
-        $svg.append(s1.get(0).editableAccidentalDOM());
+        const svg = document.querySelector('#svg');
+        svg.append(s1.get(0).editableAccidentalDOM());
 
         console.log('soundfont loaded');
         console.log(s.estimateStreamHeight());
-        $svg.mousemove(function(e) {
-            var allSVG = $(this).find('svg');
+        svg.addEventListener('mousemove', e => {
+            const allSVG = svg.querySelectorAll('svg');
             if (allSVG.length > 0) {
-                var $cThis = $(allSVG[0]);
-                var offset = $cThis.offset();
-                $('#xLoc').val(e.pageX);
-                $('#yLoc').val(e.pageY);
-                $('#xOff').val(e.pageX - offset.left);
-                $('#yOff').val(e.pageY - offset.top);
+                const cThis = allSVG[0];
+                const offset_el = offset(cThis);
+                document.querySelector('#xLoc').value = e.pageX.toString();
+                document.querySelector('#yLoc').value = e.pageY.toString();
+                document.querySelector('#xOff').value = (e.pageX - offset_el.left).toString();
+                document.querySelector('#yOff').value = (e.pageY - offset_el.top).toString();
             }
         });
     });
