Fix long standing problem of scrolling down
Some of the testHTML files weren't loading the m21 stylesheet.  A few other small bug fixes

--- a/testHTML/crossSiteTest.html
+++ b/testHTML/crossSiteTest.html
@@ -1,4 +1,5 @@
 <html><head>
+   <link rel="stylesheet" href="../css/m21.css" type="text/css" />
    <script src="//localhost:8000/build/music21.debug.js"></script>
 </head>
 <body>
