--- a/testHTML/es6.html
+++ b/testHTML/es6.html
@@ -1,12 +1,12 @@
 <html lang="en">
     <head>
         <title>Pure ES6 tests</title>
+        <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+        <script src="../build/music21.debug.js"></script>
     </head>
     <body>
         Pure ES6 test. Click the score and the note will go up one pitch.
         <br>
-
-        <script src="../build/music21.debug.js"></script>
         <script>
             const s = new music21.stream.Stream();
             const n = new music21.note.Note();
