--- a/testHTML/pickleM21.html
+++ b/testHTML/pickleM21.html
@@ -1,6 +1,8 @@
 <html lang="en">
 <head>
- <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <title>Pickle Test</title>
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <link rel="stylesheet" href="../css/m21.css" type="text/css" />
 </head>
 <body>
 <h1>A test of pickling and unpickling with jsonpickleJS</h1>
