--- a/testHTML/pitchEditing.html
+++ b/testHTML/pitchEditing.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pitch Editing</title>
+    <link rel="stylesheet" href="../css/m21.css" type="text/css" />
     <script src="../build/music21.debug.js"></script>
 </head>
 <body>
