--- a/testHTML/pitchEditing_long_score.html
+++ b/testHTML/pitchEditing_long_score.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pitch Editing</title>
+    <link rel="stylesheet" href="../css/m21.css" type="text/css" />
 </head>
 <body>
     <h2>Testing alterable pitches in a long score</h2>
