--- a/testHTML/recordAudio.html
+++ b/testHTML/recordAudio.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel="stylesheet" href="../css/m21.css" type="text/css" />
     <style>
     canvas {
         display: inline-block;
