--- a/testHTML/colorChanger.html
+++ b/testHTML/colorChanger.html
@@ -2,6 +2,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Music21j Color Picker</title>
+  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
   <script src="../build/music21.debug.js"></script>
 </head>
 <body>
