--- a/testHTML/demo-Cuthbert.html
+++ b/testHTML/demo-Cuthbert.html
@@ -2,6 +2,7 @@
 <head>
   <title>First music21j demo</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
   <script src="../build/music21.debug.js"></script>
 </head>
 <body>
