--- a/testHTML/keyboardJazz.html
+++ b/testHTML/keyboardJazz.html
@@ -4,11 +4,12 @@
         <!-- for MSIE 10 on Windows 8 -->
         <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true"/>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+        <script src="../build/music21.debug.js"></script>
     </head>
     <body>
     <div id="keyboardDiv"></div>
     <div id="putMidiSelectHere"></div>
-    <script src="../build/music21.debug.js"></script>
     <script>
     var k = ""; // will become keyboard.Keyboard object
 
