--- a/testHTML/m21jSandbox.html
+++ b/testHTML/m21jSandbox.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Music21j Sandbox</title>
+    <link rel="stylesheet" href="../css/m21.css" type="text/css" />
     <script src="../build/music21.debug.js"></script>
     <style>
         .streamHolding {
