--- a/testHTML/midiInKeyChords.html
+++ b/testHTML/midiInKeyChords.html
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
 <title>MIDI In Chords for Music21j</title>
-<!-- for MSIE 10 on Windows 8 -->
-<meta http-equiv="X-UA-Compatible" content="requiresActiveX=true" />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
+	<!-- for MSIE 10 on Windows 8 -->
+	<meta http-equiv="X-UA-Compatible" content="requiresActiveX=true" />
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" href="../css/m21.css" type="text/css" />
 </head>
 <body>
 	<div>
