--- a/testHTML/musicxmlTest.html
+++ b/testHTML/musicxmlTest.html
@@ -2,12 +2,12 @@
 <head>
     <title>MusicXML Parse Test</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+    <script src="../build/music21.debug.js"></script>
 </head>
 <body>
     <h1>MusicXML rendering test</h1>
-    <div>This page should render a four-part Bach chorale, first four measures</div>
-
-    <script src="../build/music21.debug.js"></script>
+    <div>This page should render a four-part Bach chorale (BWV66.6 measures 3-6)</div>
     <script>
     mxUrl = 'bachOut.xml';
     sp = new music21.musicxml.xmlToM21.ScoreParser();
