--- a/testHTML/xyLocation.html
+++ b/testHTML/xyLocation.html
@@ -4,6 +4,7 @@
     <!-- for MSIE 10 on Windows 8 -->
     <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="../css/m21.css" type="text/css" />
     <style>
         #svg { background-color: #ffffaa }
     </style>
