--- a/testHTML/pitchEditing_long_score.html
+++ b/testHTML/pitchEditing_long_score.html
@@ -10,8 +10,10 @@
     <div id="editable" style="width: 250px">
     </div>
 
-    <h2>Testing alterable pitches in a long SINGLE PART</h2>
-    <div id="editablePart" style="width: 250px">
+    <h2>Testing alterable pitches in a long, scrolling SINGLE PART</h2>
+    <div id="editablePartHolder" style="max-width: 250px; overflow: scroll">
+        <div id="editablePart" style="width: 250px">
+    </div>
     </div>
 
 
@@ -35,9 +37,9 @@
         s.insert(0, p1);
         s.insert(0, p2);
         s.renderOptions.maxSystemWidth = 400;
-        s.renderOptions.marginBottom = 600;
+        s.renderOptions.marginBottom = 180;
         s.renderOptions.systemPadding = 100;
-        const d = s.editableAccidentalDOM(500);
+        const d = s.editableAccidentalDOM();
         editable.appendChild(d);
 
         const editablePart = document.querySelector('#editablePart');
@@ -46,8 +48,8 @@
              e1 e1 e1 e1 e1 e1 e1 e1 e1
              a1 a1 a1 a1 a1 a1 a1 a1 a1
             `);
-        p.renderOptions.maxSystemWidth = 400;
-        const dp = p.editableAccidentalDOM(500);
+        p.renderOptions.scaleFactor = {x: 1.5, y: 1.5};
+        const dp = p.editableAccidentalDOM();
         editablePart.appendChild(dp);
     </script>
 </body>
